# lumen

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  LICENSE.md  README.md  build.rs  build.sh  dev-test.sh
.github/workflows/: release.yml
crates/lumen-audio/: Cargo.toml
crates/lumen-audio/src/: capture.rs  lib.rs  pw_sink.rs  types.rs
crates/lumen-compositor/: Cargo.toml
crates/lumen-compositor/src/: clipboard_bridge.rs  compositor.rs  handlers.rs  input.rs  lib.rs  render.rs  state.rs  types.rs
crates/lumen-encode/: Cargo.toml
crates/lumen-encode/src/: codec.rs  encoder.rs  lib.rs  nvenc.rs  software.rs  vaapi.rs  yuv.rs
crates/lumen-gamepad/: Cargo.toml
crates/lumen-gamepad/src/: device.rs  lib.rs  mapping.rs
crates/lumen-turn/: Cargo.toml
crates/lumen-turn/src/: lib.rs
crates/lumen-web/: Cargo.toml
crates/lumen-web/src/: assets.rs  lib.rs  metrics.rs  server.rs  signaling.rs  types.rs
crates/lumen-web/src/auth/: basic.rs  bearer.rs  mod.rs  oauth2.rs
crates/lumen-webrtc/: Cargo.toml
crates/lumen-webrtc/src/: lib.rs  manager.rs  packetize.rs  session.rs  types.rs
dev-docs/: README.md  architecture.md  overview.md  third-party-libraries.md
dev-docs/components/: lumen-audio.md  lumen-compositor.md  lumen-encode.md  lumen-gamepad.md  lumen-turn.md  lumen-web.md  lumen-webrtc.md  main-application.md
docker/: Dockerfile  Dockerfile.packages  README.md  entrypoint.sh  kde-autostart  kde-kwinrc  kde-plasma-desktop-appletsrc  konsole-shell.profile  labwc-autostart  labwc-menu.xml
docs/: README.md  _config.yml  architecture.md  for-developers.md  index.md  overview.md  third-party-libraries.md
docs/components/: lumen-audio.md  lumen-compositor.md  lumen-encode.md  lumen-turn.md  lumen-web.md  lumen-webrtc.md  main-application.md
docs/getting-started/: docker.md  fedora.md  index.md  podman.md  ubuntu.md
pkgs/: 70-lumen-uinput.rules  README.md  example.env  lumen@.service
pkgs/debian/: postinst
src/: cli.rs  hardware.rs  logging.rs  main.rs  tasks.rs  turn.rs
web/: index.html  lumen-client.js  lumen-client.mjs  lumen-debug.mjs  lumen-perf.mjs  lumen-ui.js  lumen-ui.mjs  manifest.json  style.css  sw.js
web/ui/: coords.mjs  cursor.mjs  gamepad-mapper.mjs  gamepad.mjs  input.mjs  keyboard-button.mjs  resize.mjs  touch.mjs
