[workspace]
members = [
    ".",
    "crates/lumen-compositor",
    "crates/lumen-audio",
    "crates/lumen-encode",
    "crates/lumen-webrtc",
    "crates/lumen-web",
    "crates/lumen-turn",
    "crates/lumen-gamepad",
]
resolver = "2"

[workspace.lints.rust]
unused = "warn"

[workspace.lints.clippy]
# All default lints (clippy::all) are already enabled by default.
# Promote select pedantic lints that catch real bugs or improve clarity.
cast_possible_truncation  = "warn"
cast_sign_loss            = "warn"
explicit_iter_loop        = "warn"
filter_map_next           = "warn"
flat_map_option           = "warn"
manual_string_new         = "warn"
needless_pass_by_value    = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
# Allow common false-positives / overly strict lints
module_name_repetitions   = "allow"
missing_errors_doc        = "allow"
missing_panics_doc        = "allow"
must_use_candidate        = "allow"

[workspace.dependencies]
base64 = "0.22"
bytes = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-journald = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"

[package]
name = "lumen"
version = "0.1.0"
license = "MIT"
description = "A Wayland compositor that streams the desktop to browsers via WebRTC."
edition = "2021"

[dependencies]
lumen-compositor = { path = "crates/lumen-compositor" }
lumen-audio      = { path = "crates/lumen-audio" }
lumen-encode     = { path = "crates/lumen-encode" }
lumen-webrtc     = { path = "crates/lumen-webrtc" }
lumen-web        = { path = "crates/lumen-web" }
lumen-turn       = { path = "crates/lumen-turn" }
lumen-gamepad    = { path = "crates/lumen-gamepad" }
tokio            = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-journald = { workspace = true }
anyhow           = { workspace = true }
base64           = { workspace = true }
serde_json       = { workspace = true }
clap             = { version = "4", features = ["derive", "env"] }
rand             = "0.9"
rustls           = { version = "0.23", features = ["ring"], default-features = false }

[build-dependencies]
# Force bindgen 0.69's `runtime` feature on. pam-sys uses bindgen 0.69 without
# `runtime`, but ffmpeg-sys-next enables clang-sys/runtime via bindgen 0.72,
# so Cargo compiles clang-sys in runtime mode globally. Without this, pam-sys's
# build script panics because clang-sys expects an explicit load() call that
# bindgen 0.69 only makes when its own `runtime` feature is enabled.
bindgen = { version = "0.69", features = ["runtime"], default-features = false }

[lints]
workspace = true

[package.metadata.deb]
maintainer = "Lumen Contributors"
extended-description = "A Wayland compositor that streams the desktop to browsers via WebRTC."
depends = "$auto, labwc, foot"
section = "x11"
priority = "optional"
maintainer-scripts = "pkgs/debian/"
assets = [
    { source = "target/release/lumen", dest = "/usr/bin/lumen", mode = "755" },
    { source = "pkgs/lumen@.service", dest = "/lib/systemd/system/lumen@.service", mode = "644" },
    { source = "pkgs/example.env", dest = "/usr/share/lumen/example.env", mode = "644" },
]

[package.metadata.generate-rpm]
post_install_script = """
set -e
if [ ! -d /etc/lumen ]; then
    mkdir -p /etc/lumen
    chmod 755 /etc/lumen
fi
if [ ! -f /etc/lumen/example.env ]; then
    cp /usr/share/lumen/example.env /etc/lumen/example.env
    chmod 644 /etc/lumen/example.env
fi
echo ""
echo "Lumen installed. To get started:"
echo ""
echo "  System-wide config (any user):"
echo "    cp /etc/lumen/example.env /etc/lumen/<username>.env"
echo "    nano /etc/lumen/<username>.env"
echo ""
echo "  Or per-user config (overrides system config):"
echo "    mkdir -p ~/.config/lumen"
echo "    cp /etc/lumen/example.env ~/.config/lumen/env"
echo "    nano ~/.config/lumen/env"
echo ""
echo "  Start the service:"
echo "    systemctl start lumen@<username>"
echo "    systemctl enable lumen@<username>  # optional: autostart on boot"
echo ""
"""
assets = [
    { source = "target/release/lumen", dest = "/usr/bin/lumen", mode = "755" },
    { source = "pkgs/lumen@.service", dest = "/lib/systemd/system/lumen@.service", mode = "644" },
    { source = "pkgs/example.env", dest = "/usr/share/lumen/example.env", mode = "644" },
]

[package.metadata.generate-rpm.requires]
labwc = "*"
foot = "*"
