[package]
name = "lumen-audio"
version = "0.1.0"
edition = "2021"

[dependencies]
# PulseAudio
libpulse-binding        = "2.28"
libpulse-simple-binding = "2.28"

# Opus codec
opus = "0.3"

# Async channel to deliver encoded packets
tokio   = { workspace = true }
bytes   = { workspace = true }

# Utilities
tracing   = { workspace = true }
thiserror = { workspace = true }
anyhow    = { workspace = true }

[lints]
workspace = true
