[package]
name = "lumen-encode"
version = "0.1.0"
edition = "2021"

[features]
# Hardware H.264 encoding via NVIDIA NVENC.
#
# Requirements (runtime, not compile-time):
#   - NVIDIA GPU with NVENC support (Kepler or newer)
#   - NVIDIA driver 470+ (for DMA-BUF external memory import into CUDA)
#   - FFmpeg built with --enable-nvenc and --enable-cuda
#
# When enabled, NVENC is probed first at startup; VA-API and x264 remain as
# fallback encoders.  All NVENC-specific code is compiled out when this
# feature is not active, so the default build has no additional dependencies.
nvenc = []

[dependencies]
lumen-compositor = { path = "../lumen-compositor" }

# Hardware encoding via FFmpeg (VA-API)
ffmpeg-next     = "8"
ffmpeg-sys-next = "8"

# Software H.264 encoding
x264-sys = "0.2"

# YUV color space conversion
yuv = "0.8"

# Parallel processing
rayon = "1"

tokio     = { workspace = true }
bytes     = { workspace = true }
tracing   = { workspace = true }
thiserror = { workspace = true }
anyhow    = { workspace = true }
libc      = "0.2"

[lints]
workspace = true
