[package]
name = "lumen-web"
version = "0.1.0"
edition = "2021"

[dependencies]
lumen-webrtc    = { path = "../lumen-webrtc" }
lumen-compositor = { path = "../lumen-compositor" }

# HTTP server + WebSocket
axum        = { version = "0.8", features = ["ws", "macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower-http  = { version = "0.6", features = ["fs", "cors", "trace"] }

# Authentication
pam            = "0.7"
openidconnect  = { version = "3", features = ["reqwest"] }
cookie         = "0.18"
uuid           = { version = "1", features = ["v4"] }

tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
base64      = { workspace = true }

[lints]
workspace = true
